--- a/week-11/project-hono/package.json
+++ b/week-11/project-hono/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "projecthono",
   "scripts": {
     "dev": "wrangler dev src/index.ts",
     "deploy": "wrangler deploy --minify src/index.ts"
